[metadata]
name = briefcase
url = http://beeware.org/briefcase
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Documentation = http://briefcase.readthedocs.io/en/latest/
    Tracker = https://github.com/beeware/briefcase/issues
    Source = https://github.com/beeware/briefcase
author = Russell Keith-Magee
author_email = russell@keith-magee.com
maintainer = Russell Keith-Magee
maintainer_email = russell@keith-magee.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
license = New BSD
license_files =
    LICENSE
description = Tools to support converting a Python project into a standalone native application.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    app
    packaging
    installer
    macOS
    iOS
    android
    mobile
    windows
    tvOS
    watch
    watchOS
    wearos
    web
    pyscript
    pyodide
platforms = any

[options]
zip_safe = False
packages = find:
python_requires = >= 3.8
include_package_data = True
package_dir =
    = src
install_requires =
    pip >= 22
    setuptools >= 60
    wheel ~= 0.37
    cookiecutter ~= 2.1
    tomli ~= 2.0; python_version <= "3.10"
    importlib_metadata >= 4.4; python_version <= "3.9"
    requests ~= 2.28
    GitPython ~= 3.1
    dmgbuild ~= 1.6; sys_platform == "darwin"
    psutil ~= 5.9
    rich >= 12.6,< 14.0
    platformdirs ~= 2.6
    packaging ~= 22.0
    tomli_w ~= 1.0

[options.extras_require]
dev =
    pre-commit~=2.20
    setuptools_scm[toml] ~= 7.0
    tox ~= 4.0
    coverage[toml] ~= 6.5
test =
    pytest~=7.2
    pytest-tldr~=0.2
    pytest-cov~=4.0
docs =
    sphinx~=5.3
    sphinxcontrib-spelling~=7.7
    pyenchant~=3.2
    sphinx-autobuild~=2021.3
    sphinx_rtd_theme~=1.1
    sphinx_tabs~=3.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    briefcase = briefcase.__main__:main
briefcase.platforms =
    android = briefcase.platforms.android
    iOS = briefcase.platforms.iOS
    linux = briefcase.platforms.linux
    macOS = briefcase.platforms.macOS
    # tvOS = briefcase.platforms.tvOS
    # watchOS = briefcase.platforms.watchOS
    # wearos = briefcase.platforms.wearos
    web = briefcase.platforms.web
    windows = briefcase.platforms.windows
briefcase.formats.android =
    gradle = briefcase.platforms.android.gradle
briefcase.formats.iOS =
    xcode = briefcase.platforms.iOS.xcode
briefcase.formats.linux =
    appimage = briefcase.platforms.linux.appimage
    flatpak = briefcase.platforms.linux.flatpak
    # deb = briefcase.platforms.linux.deb
    # rpm = briefcase.platforms.linux.rpm
    # snap = briefcase.platforms.linux.snap
briefcase.formats.macOS =
    app = briefcase.platforms.macOS.app
    xcode = briefcase.platforms.macOS.xcode
# briefcase.formats.tvOS =
#     xcode = briefcase.platforms.tvOS.xcode
# briefcase.formats.watchOS =
#     xcode = briefcase.platforms.watchOS.xcode
# briefcase.formats.wearos =
#     gradle = briefcase.platforms.wearos.gradle
briefcase.formats.web =
    static = briefcase.platforms.web.static
briefcase.formats.windows =
    app = briefcase.platforms.windows.app
    visualstudio = briefcase.platforms.windows.visualstudio

[aliases]
test=pytest

[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=\
    venv*/*,\
    local/*,\
    docs/*,\
    build/*,\
    tests/apps/*,\
    .eggs/*,\
    .tox/*
max-complexity = 10
max-line-length = 119
ignore = E121,E123,E126,E226,E24,E704,W503,W504,C901
